# she_test

./: .clang-format  CMakeLists.txt  README.md  README_CN.md  TODO.md
Auto-generatedCode/: makefile
TestUnit/: makefile  server.cpp  sheTest.hpp
cmake/: build.cmake  compilation_options.cmake  config.cmake  import.cmake  import_third_party.cmake  install.cmake  she_test-config.cmake  target_src.cmake  target_test.cmake  z_install.cmake
exec/: application.cpp
outdated_codes/: README.md
outdated_codes/Auto-generatedCode/: createClass.cpp  createClass.h
outdated_codes/readModule/: notes.md  users.init
outdated_codes/serverTest/: client.cc  linuxSocketNotes.md  makefile  note.md  server.cc  server.cpp
readModule/: README.md  makefile  read.cpp  read.hpp  readTest.cpp
readTest/: makefile  read.cpp  user.init
serverTest/: client.cpp  linuxSocketNotes.md  linux_client.cpp  linux_server.cpp  note.md  server.cpp  thread.hpp
she_test/: she_test.h
src/: global_init.h  global_test_set.h  print_color.h  register_test_cases.h  run_all_test.cpp  run_all_test.h  she_test.cpp  she_test.h  test_case_manager.h
src/command_line/: options.h  parser.cpp  parser.h
src/command_line_parser/: command_line.cpp  command_line.h  help.h  options.h  version.h
src/easy_demo/: register_test.h
src/format/: color.h  colorful.h  fmt.h  gtest.cpp  gtest.h  style_v1.cpp  style_v1.h  template_format.cpp  template_format.h
src/output_format/: common.h  gtest_format.h  s_test_v1.h  she_test_v1.h
src/register_demo/: register_demo.h
src/test_tools/: equal.h
test/: global_test_set.h  main.cpp  t1.cpp  t1.h  test_suite.h  test_support.h
(+41 files in other folders)
